Fri Nov 11 14:58:33 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Qos_Helper.h:

          Restored previous version that uses the 
          EXTERN_OR_INLINE_HELPER_METHOD  macro, but changed the
          macro to be defined as ACE_INLINE instead of nothing if 
          __ACE_INLINE__ is defined.

Fri Nov 11 12:51:09 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:
        
          Fixed warnings on string (char*) initialization.
          
        * dds/DCPS/Qos_Helper.h:

          Used ACE_NAMESPACE_INLINE_FUNCTION for inline functions 
          declare to fix warnings on Solaris.
          
Fri Nov 11 11:06:19 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:

          Removed extra parenthesis in the "#if defined" statement.
          The should fix the compilation problem on Solaris builds.
          
Thu Nov 10 16:35:32 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/Qos_Helper.h:
          Solaris compilers failed when the method declaration was
          extern and the definition was inline.  Added a macro
          to assign the extern when the code is not inlined.

        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:
        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:

          Set the VC6 necessary extra unused parameters into
          a typedef'd function declaration.  Solaris compilers
          were choking on the extra parameter in the templated
          method.

        * dds/DCPS/transport/framework/DataLinkSetMap.inl:
        * dds/DCPS/transport/framework/NullSynchStrategy.inl:
          Removed unused files.
