@@ -777,7 +777,7 @@ int DCPS_IR_Domain::init_built_in_topics_transport ()
       if (status != TAO::DCPS::ATTACH_OK)
         {
           // We failed to attach to the transport for some reason.
-          char* status_str;
+          const char* status_str;
 
           switch (status)
             {
